added a section on home page
added Licenses & Certifications on home page, also added three Licenses from Udemy

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -9,6 +9,89 @@
 /*
 * SECTION
 */
+// LISTS 
+.list.list-group-item {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+
+
+	.img-wrapper {
+		width: 15%;
+		margin-right: 15px;
+
+
+		// Extra small devices (portrait phones, less than 576px)
+		@media (max-width: 575.98px) {
+			width: 25%;
+		}
+
+		// Small devices (landscape phones, 576px and up)
+		@media (min-width: 576px) and (max-width: 767.98px) {
+			width: 25%;
+		}
+
+		// Medium devices (tablets, 768px and up)
+		@media (min-width: 768px) and (max-width: 991.98px) {
+			width: 22%;
+		}
+
+		// Large devices (desktops, 992px and up)
+		@media (min-width: 992px) and (max-width: 1199.98px) {
+			width: 20%;
+		}
+
+		// Extra large devices (large desktops, 1200px and up)
+		@media (min-width: 1200px) {
+			// background-color: green;
+		}
+	}
+
+	.content {
+		width: 100%;
+
+		h6 {
+
+			// Extra small devices (portrait phones, less than 576px)
+			@media (max-width: 575.98px) {
+				font-size: 12px;
+			}
+
+			// Small devices (landscape phones, 576px and up)
+			@media (min-width: 576px) and (max-width: 767.98px) {
+				font-size: 13px;
+			}
+
+			// Medium devices (tablets, 768px and up)
+			@media (min-width: 768px) and (max-width: 991.98px) {
+				font-size: 14px;
+			}
+
+			// Large devices (desktops, 992px and up)
+			@media (min-width: 992px) and (max-width: 1199.98px) {
+				font-size: 14px;
+			}
+		}
+
+		small {
+
+			// Extra small devices (portrait phones, less than 576px)
+			@media (max-width: 575.98px) {
+				font-size: 11px;
+			}
+
+			// Small devices (landscape phones, 576px and up)
+			@media (min-width: 576px) and (max-width: 767.98px) {
+				font-size: 12px;
+			}
+		}
+
+	}
+
+	.link {
+		margin-left: 15px;
+	}
+}
 
 // RESUME 
 @import './parts/resume';
