--- a/assets/css/theme-new.css
+++ b/assets/css/theme-new.css
@@ -7,20 +7,94 @@
 /*
 * SECTION
 */
+.list.list-group-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.list.list-group-item .img-wrapper {
+  width: 15%;
+  margin-right: 15px;
+}
+@media (max-width: 575.98px) {
+  .list.list-group-item .img-wrapper {
+    width: 25%;
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .list.list-group-item .img-wrapper {
+    width: 25%;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .list.list-group-item .img-wrapper {
+    width: 22%;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .list.list-group-item .img-wrapper {
+    width: 20%;
+  }
+}
+.list.list-group-item .content {
+  width: 100%;
+}
+@media (max-width: 575.98px) {
+  .list.list-group-item .content h6 {
+    font-size: 12px;
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .list.list-group-item .content h6 {
+    font-size: 13px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .list.list-group-item .content h6 {
+    font-size: 14px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .list.list-group-item .content h6 {
+    font-size: 14px;
+  }
+}
+@media (max-width: 575.98px) {
+  .list.list-group-item .content small {
+    font-size: 11px;
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .list.list-group-item .content small {
+    font-size: 12px;
+  }
+}
+.list.list-group-item .link {
+  margin-left: 15px;
+}
+
 .cert-section .resume-cert-list li.item {
-  font-size: 0.875rem; }
-  .cert-section .resume-cert-list li.item .item-title {
-    opacity: 0.7;
-    display: block;
-    font-size: 0.875rem;
-    overflow: hidden;
-    overflow-wrap: normal;
-    white-space: nowrap;
-    overflow: hidden;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis; }
-  .cert-section .resume-cert-list li.item .source {
-    color: red; }
+  font-size: 0.875rem;
+}
+.cert-section .resume-cert-list li.item .item-title {
+  opacity: 0.7;
+  display: block;
+  font-size: 0.875rem;
+  overflow: hidden;
+  overflow-wrap: normal;
+  white-space: nowrap;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+}
+.cert-section .resume-cert-list li.item .source {
+  color: red;
+}
 
 /*
 * FOOTer
@@ -32,14 +106,16 @@
   transition: transform 0.3s ease-in-out 0.2s;
   transition: transform 0.3s ease-in-out 0.2s, -webkit-transform 0.3s ease-in-out 0.2s;
   -webkit-transform: skew(10deg, 10deg);
-  -ms-transform: skew(10deg, 10deg);
-  transform: skew(10deg, 10deg); }
+      -ms-transform: skew(10deg, 10deg);
+          transform: skew(10deg, 10deg);
+}
 
 .header .blog-name a {
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  text-shadow: 1px 1px 0px #d5d5d5, 7px 7px 0px rgba(0, 0, 0, 0.2); }
+  text-shadow: 1px 1px 0px #d5d5d5, 7px 7px 0px rgba(0, 0, 0, 0.2);
+}
 
 .header .blog-name a:hover {
   -webkit-transition: all 0.3s ease-in-out;
@@ -47,11 +123,13 @@
   transition: all 0.3s ease-in-out;
   text-shadow: 1px 1px 0px #d5d5d5, 7px 7px 0px rgba(0, 0, 0, 0.2);
   -webkit-animation: color-change 1s linear infinite;
-  animation: color-change 1s linear infinite; }
+          animation: color-change 1s linear infinite;
+}
 
 a:hover {
   -webkit-animation: color-change 1s linear infinite;
-  animation: color-change 1s linear infinite; }
+          animation: color-change 1s linear infinite;
+}
 
 .testimonial-carousel .item {
   min-height: 300px;
@@ -60,14 +138,17 @@ a:hover {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between; }
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 
 .testimonial-carousel blockquote {
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 form textarea {
-  min-height: 100px; }
+  min-height: 100px;
+}
