--- a/assets/css/theme-1.css
+++ b/assets/css/theme-1.css
@@ -12776,11 +12776,11 @@ body {
 }
 
 .config-panel #color-options li.theme-9 a {
-  background-color: #D67553
+  background-color: #F44336
 }
 
 .config-panel #color-options li.theme-10 a {
-  background-color: #5FCB71
+  background-color: #4CAF50
 }
 
 .config-panel .close {
