--- a/assets/css/parts/_overwrite.scss
+++ b/assets/css/parts/_overwrite.scss
@@ -1,7 +1,7 @@
 // PROFILE IMAGE
 .profile-section {
   .profile-image {
-    filter: drop-shadow(2px 2px #444);
+    filter: drop-shadow(3px 5px 10px rgba(2, 2, 2, 0.281));
   }
 }
 
